--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@nuxtjs/seo": "^3.0.2",
     "dotenv": "^16.4.7",
-    "nuxt": "^3.16.2",
+    "nuxt": "^3.17.3",
     "unhead": "^2.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.2",
+    "@iconify-json/hugeicons": "^1.2.5",
     "@iconify-json/lucide": "^1.2.34",
     "@nuxt/icon": "^1.11.0",
     "@nuxtjs/tailwindcss": "^6.13.2"
