--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.10.0",
     "@nuxtjs/seo": "^3.0.2",
     "dotenv": "^16.4.7",
     "nuxt": "^3.17.3",
