--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.10.0",
-    "@nuxtjs/seo": "^3.0.2",
     "dotenv": "^16.4.7",
     "nuxt": "^3.17.3",
     "unhead": "^2.0.3",
@@ -21,6 +20,7 @@
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/hugeicons": "^1.2.5",
+    "@iconify-json/ic": "^1.2.2",
     "@iconify-json/lucide": "^1.2.34",
     "@nuxt/icon": "^1.11.0",
     "@nuxtjs/tailwindcss": "^6.13.2"
