--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.10.0",
+    "@nuxtjs/i18n": "^10.0.3",
     "dotenv": "^16.4.7",
     "nuxt": "^4.0.3",
     "unhead": "^2.0.3",
