--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "@iconify-json/ic": "^1.2.2",
     "@iconify-json/lucide": "^1.2.34",
     "@nuxt/icon": "^1.11.0",
-    "@nuxtjs/tailwindcss": "^6.13.2"
+    "@nuxt/test-utils": "^3.21.0",
+    "@nuxtjs/tailwindcss": "^6.13.2",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^20.0.11",
+    "playwright-core": "^1.57.0",
+    "vitest": "^3.2.4"
   }
 }
